widget 07: fix text wrap on the details

--- a/client/src/widgets/07/style.scss
+++ b/client/src/widgets/07/style.scss
@@ -424,6 +424,7 @@
 
             &--title {
               color: var.$gray-light;
+              white-space: nowrap;
             }
 
             &--line {
